# InteractiveEventMap

./: .gitignore  CMakeLists.txt  InteractiveIventMapClient  InteractiveIventMapServer  README.md  client_main.cpp  main.db  server_main.cpp  vcpkg.json
Documentation/Client/html/: annotated.html  classReadData-members.html  classReadData.html  classServerConnection-members.html  classServerConnection.html  classes.html  dir_2c3532eebac0a22113c1ef3c6e07ace2.html  dir_616da6980557862f0f213923aa1ed043.html  dir_9c29e69f2d058821519235aa074ee1bb.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  network__connection_8h_source.html  unionbytes__from__uint32__t-members.html  unionbytes__from__uint32__t.html
Documentation/Client/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js
Documentation/Client/latex/: annotated.tex  classReadData.tex  classServerConnection.tex  refman.tex  unionbytes__from__uint32__t.tex
Documentation/Server/html/: annotated.html  classClient-members.html  classClient.html  classClientConnection-members.html  classClientConnection.html  classReadData-members.html  classReadData.html  classServer-members.html  classServer.html  classes.html  dir_0933bcb3bb7d5504278d7482c45bc49b.html  dir_aff869d5b8b5fd6108b34cbe82964618.html  dir_bd99d63baf74517c1d78144dde54375f.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  network__connection_8h_source.html  unionbytes__from__uint32__t-members.html  unionbytes__from__uint32__t.html
Documentation/Server/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
Documentation/Server/latex/: annotated.tex  classClient.tex  classClientConnection.tex  classReadData.tex  classServer.tex  refman.tex  unionbytes__from__uint32__t.tex
GUI/: CMakeLists.txt
GUI/Icons/: main.db
GUI/include/: Dialod.h  Mainwindow.h  auth_window.h  listwidget.h  reg_window.h  skeleton.h
GUI/lib/App/: CMakeLists.txt
GUI/lib/App/src/: Dialod.h  Dialog.cpp  listwidget.cpp  listwidget.h  skeleton.cpp  skeleton.h
GUI/lib/Pearsons/: pearsons.h
GUI/lib/Reg_form/: CMakeLists.txt
GUI/lib/Reg_form/src/: Mainwindow.cpp  Mainwindow.h  auth_window.cpp  auth_window.h  reg_window.cpp  reg_window.h
GUI/src/: CMakeLists.txt  Dialog.cpp  Mainwindow.cpp  auth_window.cpp  listwidget.cpp  main.cpp  reg_window.cpp  skeleton.cpp
client_code/: CMakeLists.txt
client_code/include/: network_connection.h  network_connection_client.h
client_code/src/: main.cpp  network_connection.cpp  network_connection_client.cpp
client_sql/include/: client_sql.h
client_sql/src/: client_sql.cpp  main.cpp
new_sql/: Readme.md
new_sql/include/: sql_new.h
new_sql/src/: main.cpp  sql_new.cpp
server_code/: CMakeLists.txt
server_code/include/: network_connection.h  network_connection_server.h
server_code/src/: main.cpp  network_connection.cpp  network_connection_server.cpp
server_sql/include/: server_sql.h
server_sql/src/: main.cpp  server_sql.cpp
sql_code/: test_sql.cpp
sql_code/include/: sql_tools.h
sql_code/src/: main.cpp  sql_tools.cpp
sql_code_client/include/: sql_tools.h
sql_code_client/src/: sql_tools.cpp
sql_code_server/include/: sql_tools.h
sql_code_server/src/: main.cpp  sql_tools.cpp
sql_new/include/: sql_new.h
sql_new/src/: main.cpp  sql_new.cpp
